legend-pure-rust/crates/parser/tests/snapshots/test_function__derived_multiple_statements.snap
---
source: crates/parser/tests/test_function.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Class(
                    ClassDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 7,
                                    end_line: 2,
                                    end_column: 8,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "WithDerived",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 7,
                                end_line: 2,
                                end_column: 8,
                            },
                        },
                        type_variable_parameters: [],
                        type_parameters: [],
                        multiplicity_parameters: [],
                        super_types: [],
                        properties: [],
                        qualified_properties: [
                            QualifiedProperty {
                                name: "derived",
                                parameters: [
                                    Parameter {
                                        name: "s",
                                        type_ref: Some(
                                            TypeReference {
                                                package: None,
                                                name: "String",
                                                type_arguments: [],
                                                multiplicity_arguments: [],
                                                type_variable_values: [],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 16,
                                                    end_line: 4,
                                                    end_column: 21,
                                                },
                                            },
                                        ),
                                        multiplicity: Some(
                                            PureOne,
                                        ),
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 13,
                                            end_line: 4,
                                            end_column: 13,
                                        },
                                    },
                                ],
                                return_type: Type(
                                    TypeReference {
                                        package: None,
                                        name: "Integer",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 8,
                                            start_column: 8,
                                            end_line: 8,
                                            end_column: 14,
                                        },
                                    },
                                ),
                                return_multiplicity: PureOne,
                                body: [
                                    Let(
                                        LetExpr {
                                            name: "x",
                                            value: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        value: 0,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 6,
                                                            start_column: 17,
                                                            end_line: 6,
                                                            end_column: 17,
                                                        },
                                                    },
                                                ),
                                            ),
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 6,
                                                start_column: 9,
                                                end_line: 6,
                                                end_column: 11,
                                            },
                                        },
                                    ),
                                    Variable(
                                        Variable {
                                            name: "x",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 7,
                                                start_column: 9,
                                                end_line: 7,
                                                end_column: 9,
                                            },
                                        },
                                    ),
                                ],
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 5,
                                    end_line: 4,
                                    end_column: 11,
                                },
                            },
                        ],
                        constraints: [],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 5,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
